Fri Oct 12 10:50:28 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
        * bin/diff-builds-and-group-fixed-tests-only.sh:
        * docs/Download.html:
        * docs/bczar/bczar.html:
        * etc/index.html:
          Updated for x.1.5

Fri Oct 12 11:20:25 CEST 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 6.1.5 released.

Wed Oct 10 22:45:23 UTC 2012  Steve Huston  <shuston@riverace.com>

        * ace/Reactor.h: Corrected the comments concerning removal of
          signal handler registrations - they DO call handle_close() now.

        * tests/Network_Adapters_Test.{cpp, h}: Corrected the call to remove
          signal handlers and added a check in Stop_Handler::handle_close()
          to ignore calls as a result of removing a signal handler.

Wed Oct 10 18:47:12 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/bczar/bczar.html:
          Package updates

Mon Oct  8 13:27:58 UTC 2012  Steve Huston  <shuston@riverace.com>

        * ace/Sig_Handler.{cpp, inl}: Reverted change from:
          Fri Oct  5 23:09:40 UTC 2012  Steve Huston  <shuston@riverace.com>
          to initialize signal_handlers_ array. It's static so can't be
          changed all the time. Thanks to Johnny Willemsen for finding this.

Fri Oct  5 23:09:40 UTC 2012  Steve Huston  <shuston@riverace.com>

        * ace/Sig_Handler.{cpp, inl}: Initialize signal_handlers_ array.

        * ace/WFMO_Reactor.cpp: Shut things down in close() and make all the
          info changes to avoid referencing unregistered handlers later, when
          they may be invalid. The lifetime can't be controlled via close() as
          it can via remove_handler() so be sure no references bleed out.

        * tests/Bug_2368_Regression_Test.cpp: Clean up text literals.

Thu Oct  4 10:24:52 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux_icc.GNU:
          Added support for c++11 as feature
