@@ -1,0 +1,7 @@
+// $Id$
+#ifndef ACE_CONFIG_MACOSX_MOUNTAIN_LION_H
+#define ACE_CONFIG_MACOSX_MOUNTAIN_LION_H
+
+#include "ace/config-macosx-lion.h"
+
+#endif // ACE_CONFIG_MACOSX_MOUNTAIN_LION_H
