@@ -1,0 +1,4 @@
+# $Id$
+
+include $(ACE_ROOT)/include/makeinclude/platform_macosx_lion.GNU
+
